# ProgrammingProjects

./: .gitignore
Project#01/src/: CMakeLists.txt  Molecule.cpp  Molecule.h  main.cpp
Project#02/src/: CMakeLists.txt  Hessian.cpp  Hessian.h  Molecule.cpp  Molecule.h  main.cpp  masses.h
Project#03/src/: CMakeLists.txt  IntegralParser.cpp  IntegralParser.h  SCF.cpp  SCF.h  SCFAnalyser.h  main.cpp
Project#04/src/: CMakeLists.txt  Indexing.h  IntegralParser.cpp  IntegralParser.h  SCF.cpp  SCF.h  SCFAnalyser.cpp  SCFAnalyser.h  main.cpp
Project#05/src/: CC.cpp  CC.h  CMakeLists.txt  SCF.cpp  SCFAnalyser.cpp  SCFAnalyser.h
Project#06/src/: CC.cpp  IntegralParser.cpp  SCF.h  main.cpp
Project#08/src/: CMakeLists.txt  Indexing.h  IntegralParser.cpp  IntegralParser.h  SCF.cpp  SCF.h  SCFAnalyser.cpp  SCFAnalyser.h  main.cpp
Project#08/tmp/: CMakeLists.txt  main.cpp
